support @DomainPath({"user", "role", "perm"}) with extra conditions for related entities